Fix method call

--- a/src/main/resources/templates/fragment/media-list.html
+++ b/src/main/resources/templates/fragment/media-list.html
@@ -30,7 +30,7 @@
             </td>
             <td th:text="${media.getName()}"></td>
             <td th:text="${media.getIndex()}"></td>
-            <td th:text="${media.getSubIndex()()}"></td>
+            <td th:text="${media.getSubIndex()}"></td>
             <td th:text="${media.getAvailablePartsCount() + ' / ' + media.getPartsCount()}"></td>
             <td th:text="#{${media.getStatus().getLocalizationKey()}}"></td>
             <td>
