--- a/src/main/resources/templates/fragment/media-list.html
+++ b/src/main/resources/templates/fragment/media-list.html
@@ -99,6 +99,24 @@
                                 </button>
                             </form>
                         </div>
+                        <div class="m-1" th:unless="${media.getStatus().isOnDiskOrWillBe()}">
+                            <form th:action="@{~/api/admin/media/manual}" onsubmit="return onMediaActionFormSubmit(this);" method="post">
+                                <input type="hidden" name="mediaId" class="form-control" th:value="${media.getId()}"/>
+                                <button type="submit" class="btn btn-success btn-sm media-action-button d-flex flex-row justify-content-center align-items-center">
+                                    <span th:text="#{web.media-list.table.action.manual}"></span>
+                                    <span class="spinner-border spinner-border-sm d-none ms-1 media-action-spinner" role="status" aria-hidden="true"></span>
+                                </button>
+                            </form>
+                        </div>
+                        <div class="m-1" th:unless="${media.getStatus().isManual()}">
+                            <form th:action="@{~/api/admin/media/unmanual}" onsubmit="return onMediaActionFormSubmit(this);" method="post">
+                                <input type="hidden" name="mediaId" class="form-control" th:value="${media.getId()}"/>
+                                <button type="submit" class="btn btn-success btn-sm media-action-button d-flex flex-row justify-content-center align-items-center">
+                                    <span th:text="#{web.media-list.table.action.unmanual}"></span>
+                                    <span class="spinner-border spinner-border-sm d-none ms-1 media-action-spinner" role="status" aria-hidden="true"></span>
+                                </button>
+                            </form>
+                        </div>
                         <div class="m-1" th:if="${media.getStatus().isNeverChange()}">
                             <form th:action="@{~/api/admin/media/unkeep}" onsubmit="return onMediaActionFormSubmit(this);" method="post">
                                 <input type="hidden" name="mediaId" class="form-control" th:value="${media.getId()}"/>
