--- a/src/main/resources/templates/auth/plex.html
+++ b/src/main/resources/templates/auth/plex.html
@@ -20,9 +20,15 @@
             runPlexOauth(onAuthSuccess, onAuthError);
         }
     </script>
+
+    <script type="text/javascript" th:src="@{~/login/webauthn.js}"></script>
+    <script type="text/javascript" th:inline="javascript">
+        const contextPath = /*[[@{/}]]*/ "/";
+        document.addEventListener("DOMContentLoaded", () => setupLogin({}, contextPath, document.getElementById('passkey-signin')));
+    </script>
 </head>
 <body>
-<div class="d-flex justify-content-center align-items-center vh-100 text-center flex-fill">
+<div class="d-flex justify-content-center align-items-center vh-100 text-center flex-fill flex-column">
     <form id="login-form" th:action="@{~/login}" method="post">
         <label for="authToken" hidden>PIN ID</label>
         <input id="authToken" type="hidden" name="authToken" class="form-control" required hidden/>
@@ -33,6 +39,10 @@
         <label for="login-with-plex" class="form-label" th:text="#{web.auth.header}" hidden="hidden"></label>
         <button id="login-with-plex" class="btn btn-warning form-control form-control-lg fs-2" th:text="#{web.auth.header}" onclick="return onPlexLoginClick();"></button>
     </form>
+
+    <div class="login-form pt-3">
+        <button id="passkey-signin" class="btn btn-warning form-control form-control-lg fs-2" th:text="#{web.auth.passkey}"></button>
+    </div>
 </div>
 </body>
 </html>
