--- a/src/main/resources/templates/auth/plex.html
+++ b/src/main/resources/templates/auth/plex.html
@@ -23,7 +23,7 @@
 
     <script type="text/javascript" th:src="@{~/login/webauthn.js}"></script>
     <script type="text/javascript" th:inline="javascript">
-        document.addEventListener("DOMContentLoaded", () => setupLogin({}, contextPath, document.getElementById('passkey-signin')));
+        document.addEventListener("DOMContentLoaded", () => setupLogin({}, "", document.getElementById('passkey-signin')));
     </script>
 </head>
 <body>
