--- a/src/main/resources/templates/fragment/media-list.html
+++ b/src/main/resources/templates/fragment/media-list.html
@@ -63,6 +63,13 @@
                             </svg>
                         </a>
                     </div>
+                    <div th:if="${media.getTmdbId()}" class="m-1">
+                        <a title="Tvdb" th:href="${thymeleafService.getMediaTraktUrl(media)}" th:target="_blank">
+                            <svg class="m-1" height="20" width="20">
+                                <image th:xlink:href="@{~/static/trakt.svg}" height="20" width="20"/>
+                            </svg>
+                        </a>
+                    </div>
                     <th:block sec:authorize="hasRole('ROLE_ADMIN')">
                         <div th:if="${media.getSonarrSlug()}" class="m-1">
                             <a title="Sonarr" th:href="${thymeleafService.getMediaSonarrUrl(media)}" th:target="_blank">
