--- a/src/main/resources/templates/fragment/media-list.html
+++ b/src/main/resources/templates/fragment/media-list.html
@@ -64,7 +64,7 @@
                         </a>
                     </div>
                     <div th:if="${media.getTmdbId()}" class="m-1">
-                        <a title="Tvdb" th:href="${thymeleafService.getMediaTraktUrl(media)}" th:target="_blank">
+                        <a title="Trakt" th:href="${thymeleafService.getMediaTraktUrl(media)}" th:target="_blank">
                             <svg class="m-1" height="20" width="20">
                                 <image th:xlink:href="@{~/static/trakt.svg}" height="20" width="20"/>
                             </svg>
