--- a/src/main/resources/templates/fragment/requirement-list.html
+++ b/src/main/resources/templates/fragment/requirement-list.html
@@ -72,7 +72,7 @@
                         </a>
                     </div>
                     <div th:if="${requirement.getMedia().getTmdbId()}" class="m-1">
-                        <a title="Tvdb" th:href="${thymeleafService.getMediaTraktUrl(requirement.getMedia())}" th:target="_blank">
+                        <a title="Trakt" th:href="${thymeleafService.getMediaTraktUrl(requirement.getMedia())}" th:target="_blank">
                             <svg class="m-1" height="20" width="20">
                                 <image th:xlink:href="@{~/static/trakt.svg}" height="20" width="20"/>
                             </svg>
