--- a/src/main/resources/templates/fragment/media-list.html
+++ b/src/main/resources/templates/fragment/media-list.html
@@ -106,6 +106,15 @@
                                 </button>
                             </form>
                         </div>
+                        <div class="m-1" th:if="${media.getStatus().isDownloading()}">
+                            <form th:action="@{~/api/admin/media/downloaded}" onsubmit="return onMediaActionFormSubmit(this);" method="post">
+                                <input type="hidden" name="mediaId" class="form-control" th:value="${media.getId()}"/>
+                                <button type="submit" class="btn btn-success btn-sm media-action-button d-flex flex-row justify-content-center align-items-center">
+                                    <span th:text="#{web.media-list.table.action.downloaded}"></span>
+                                    <span class="spinner-border spinner-border-sm d-none ms-1 media-action-spinner" role="status" aria-hidden="true"></span>
+                                </button>
+                            </form>
+                        </div>
                         <div class="m-1" th:if="${media.getStatus().isOnDiskOrWillBe()}">
                             <form th:action="@{~/api/admin/media/manual}" onsubmit="return onMediaActionFormSubmit(this);" method="post">
                                 <input type="hidden" name="mediaId" class="form-control" th:value="${media.getId()}"/>
