--- a/src/main/resources/templates/mail/watchlist.html
+++ b/src/main/resources/templates/mail/watchlist.html
@@ -1,152 +1,9 @@
 <mjml xmlns:th="http://www.thymeleaf.org">
-    <mj-head>
-        <mj-attributes>
-            <mj-all font-family="Helvetica, Arial, sans-serif"/>
-            <mj-text font-size="14px" color="#ffffff" line-height="20px"/>
-            <mj-section background-color="#141414" padding="10px 20px"/>
-        </mj-attributes>
-        <mj-style>
-            .status-header { text-transform: uppercase; letter-spacing: 2px; font-weight: bold; }
-            .media-item { border-left: 3px solid #E50914; margin-bottom: 10px; }
-            .logo-link { display: inline-block; vertical-align: middle; padding: 0 4px; }
-        </mj-style>
-    </mj-head>
-    <mj-body background-color="#000000">
-
-        <mj-section th:unless="${#lists.isEmpty(availableMedias)}" padding-top="20px">
-            <mj-column width="100%">
-                <mj-text css-class="status-header" color="#28a745" font-size="16px" th:text="#{mail.watchlist.body.header.available}"/>
-                <mj-divider border-width="1px" border-color="#28a745" padding-bottom="15px"/>
-            </mj-column>
-
-            <mj-column width="100%" th:each="media : ${availableMedias}" padding-bottom="10px">
-                <mj-text css-class="media-item">
-                    <mj-text font-size="18px" font-weight="bold">
-                        <span th:text="#{${service.getTypeKey(media)}(${media.getName()}, ${media.getIndex()})}"/>
-                    </mj-text>
-
-                    <mj-text th:with="episodes = ${service.getEpisodes(media, userGroup)}" th:unless="${#lists.isEmpty(episodes)}" color="#aaaaaa" font-size="15px" padding-top="0px">
-                        <span th:with="episodesStr = ${#strings.listJoin(episodes, ', ')}" th:text="#{mail.watchlist.body.media.series.episodes(${episodesStr})}"/>
-                    </mj-text>
-
-                    <mj-divider border-width="1px" border-color="#333"/>
-
-                    <mj-text align="left">
-                        <a th:if="${media.getOverseerrId()}" th:href="${thymeleafService.getMediaOverseerrUrl(media)}" class="logo-link">
-                            <img th:src="|cid:${overseerrLogoResourceName}|" width="18" height="18" alt="Overseerr"/>
-                        </a>
-
-                        <a th:if="${media.getPlexId()}" th:href="${thymeleafService.getMediaPlexUrl(media)}" class="logo-link">
-                            <img th:src="|cid:${plexLogoResourceName}|" width="18" height="18" alt="Plex"/>
-                        </a>
-
-                        <a th:if="${media.getTmdbId()}" th:href="${thymeleafService.getMediaTmdbUrl(media)}" class="logo-link">
-                            <img th:src="|cid:${tmdbLogoResourceName}|" width="18" height="18" alt="TMDB"/>
-                        </a>
-
-                        <a th:if="${media.getTvdbId()}" th:href="${thymeleafService.getMediaTvdbUrl(media)}" class="logo-link">
-                            <img th:src="|cid:${tvdbLogoResourceName}|" width="18" height="18" alt="TVDB"/>
-                        </a>
-
-                        <a th:if="${media.getTmdbId()}" th:href="${thymeleafService.getMediaTraktUrl(media)}" class="logo-link">
-                            <img th:src="|cid:${traktLogoResourceName}|" width="18" height="18" alt="Trakt"/>
-                        </a>
-                    </mj-text>
-                </mj-text>
-            </mj-column>
-        </mj-section>
-
-        <mj-section th:unless="${#lists.isEmpty(downloadingMedias)}" padding-top="20px">
-            <mj-column width="100%">
-                <mj-text css-class="status-header" color="#ffc107" font-size="16px" th:text="#{mail.watchlist.body.header.downloading}"/>
-                <mj-divider border-width="1px" border-color="#ffc107" padding-bottom="15px"/>
-            </mj-column>
-
-            <mj-column width="100%" th:each="media : ${downloadingMedias}" padding-bottom="10px">
-                <mj-text css-class="media-item">
-                    <mj-text font-size="18px" font-weight="bold">
-                        <span th:text="#{${service.getTypeKey(media)}(${media.getName()}, ${media.getIndex()})}"/>
-                    </mj-text>
-
-                    <mj-text th:with="episodes = ${service.getEpisodes(media, userGroup)}" th:unless="${#lists.isEmpty(episodes)}" color="#aaaaaa" font-size="15px" padding-top="0px">
-                        <span th:with="episodesStr = ${#strings.listJoin(episodes, ', ')}" th:text="#{mail.watchlist.body.media.series.episodes(${episodesStr})}"/>
-                    </mj-text>
-
-                    <mj-divider border-width="1px" border-color="#333"/>
-
-                    <mj-text align="left">
-                        <a th:if="${media.getOverseerrId()}" th:href="${thymeleafService.getMediaOverseerrUrl(media)}" class="logo-link">
-                            <img th:src="|cid:${overseerrLogoResourceName}|" width="18" height="18" alt="Overseerr"/>
-                        </a>
-
-                        <a th:if="${media.getPlexId()}" th:href="${thymeleafService.getMediaPlexUrl(media)}" class="logo-link">
-                            <img th:src="|cid:${plexLogoResourceName}|" width="18" height="18" alt="Plex"/>
-                        </a>
-
-                        <a th:if="${media.getTmdbId()}" th:href="${thymeleafService.getMediaTmdbUrl(media)}" class="logo-link">
-                            <img th:src="|cid:${tmdbLogoResourceName}|" width="18" height="18" alt="TMDB"/>
-                        </a>
-
-                        <a th:if="${media.getTvdbId()}" th:href="${thymeleafService.getMediaTvdbUrl(media)}" class="logo-link">
-                            <img th:src="|cid:${tvdbLogoResourceName}|" width="18" height="18" alt="TVDB"/>
-                        </a>
-
-                        <a th:if="${media.getTmdbId()}" th:href="${thymeleafService.getMediaTraktUrl(media)}" class="logo-link">
-                            <img th:src="|cid:${traktLogoResourceName}|" width="18" height="18" alt="Trakt"/>
-                        </a>
-                    </mj-text>
-                </mj-text>
-            </mj-column>
-        </mj-section>
-
-        <mj-section th:unless="${#lists.isEmpty(notYetAvailableMedias)}" padding-top="20px">
-            <mj-column width="100%">
-                <mj-text css-class="status-header" color="#888888" font-size="16px" th:text="#{mail.watchlist.body.header.pending}"/>
-                <mj-divider border-width="1px" border-color="#444" padding-bottom="15px"/>
-            </mj-column>
-
-            <mj-column width="100%" th:each="media : ${notYetAvailableMedias}" padding-bottom="10px">
-                <mj-text css-class="media-item" style="border-left: 3px solid #444;">
-                    <mj-text font-size="18px" font-weight="bold">
-                        <span th:text="#{${service.getTypeKey(media)}(${media.getName()}, ${media.getIndex()})}"/>
-                    </mj-text>
-
-                    <mj-text th:with="episodes = ${service.getEpisodes(media, userGroup)}" th:unless="${#lists.isEmpty(episodes)}" color="#aaaaaa" font-size="15px" padding-top="0px">
-                        <span th:with="episodesStr = ${#strings.listJoin(episodes, ', ')}" th:text="#{mail.watchlist.body.media.series.episodes(${episodesStr})}"/>
-                    </mj-text>
-
-                    <mj-divider border-width="1px" border-color="#333"/>
-
-                    <mj-text align="left">
-                        <a th:if="${media.getOverseerrId()}" th:href="${thymeleafService.getMediaOverseerrUrl(media)}" class="logo-link">
-                            <img th:src="|cid:${overseerrLogoResourceName}|" width="18" height="18" alt="Overseerr"/>
-                        </a>
-
-                        <a th:if="${media.getPlexId()}" th:href="${thymeleafService.getMediaPlexUrl(media)}" class="logo-link">
-                            <img th:src="|cid:${plexLogoResourceName}|" width="18" height="18" alt="Plex"/>
-                        </a>
-
-                        <a th:if="${media.getTmdbId()}" th:href="${thymeleafService.getMediaTmdbUrl(media)}" class="logo-link">
-                            <img th:src="|cid:${tmdbLogoResourceName}|" width="18" height="18" alt="TMDB"/>
-                        </a>
-
-                        <a th:if="${media.getTvdbId()}" th:href="${thymeleafService.getMediaTvdbUrl(media)}" class="logo-link">
-                            <img th:src="|cid:${tvdbLogoResourceName}|" width="18" height="18" alt="TVDB"/>
-                        </a>
-
-                        <a th:if="${media.getTmdbId()}" th:href="${thymeleafService.getMediaTraktUrl(media)}" class="logo-link">
-                            <img th:src="|cid:${traktLogoResourceName}|" width="18" height="18" alt="Trakt"/>
-                        </a>
-                    </mj-text>
-                </mj-text>
-            </mj-column>
-        </mj-section>
-
-        <mj-section background-color="transparent" padding-top="40px">
-            <mj-column width="100%">
-                <mj-button th:href="${thymeleafService.getOwnUrl()}" background-color="#E50914" color="white" font-weight="bold" border-radius="4px" th:text="#{mail.footer.app-link}"/>
-            </mj-column>
-        </mj-section>
-
+    <mj-head th:insert="~{fragment/mail::header}"/>
+    <mj-body css-class="mj-body">
+        <th:block th:replace="~{fragment/mail::media-list(hasHeader=true,medias=${availableMedias},headerKey='mail.watchlist.body.header.available',headerColor='#28a745')}"/>
+        <th:block th:replace="~{fragment/mail::media-list(hasHeader=true,medias=${downloadingMedias},headerKey='mail.watchlist.body.header.downloading',headerColor='#ffc107')}"/>
+        <th:block th:replace="~{fragment/mail::media-list(hasHeader=true,medias=${notYetAvailableMedias},headerKey='mail.watchlist.body.header.pending',headerColor='#888888')}"/>
+        <th:block th:replace="~{fragment/mail::manage-website}"/>
     </mj-body>
 </mjml>
