--- a/src/main/resources/templates/mail/single-media.html
+++ b/src/main/resources/templates/mail/single-media.html
@@ -1,60 +1,7 @@
 <mjml xmlns:th="http://www.thymeleaf.org">
-    <mj-head>
-        <mj-attributes>
-            <mj-all font-family="Helvetica, Arial, sans-serif"/>
-            <mj-text font-size="14px" color="#ffffff" line-height="20px"/>
-            <mj-section background-color="#141414" padding="20px"/>
-        </mj-attributes>
-        <mj-style>
-            .logo-link { display: inline-block; vertical-align: middle; padding: 0 4px; }
-            .separator { color: #444; padding: 0 8px; }
-            .media-card { border: 1px solid #333; border-radius: 8px; }
-        </mj-style>
-    </mj-head>
-    <mj-body background-color="#000000">
-
-        <mj-section css-class="media-card">
-            <mj-column width="100%">
-                <mj-text font-size="18px" font-weight="bold">
-                    <span th:text="#{${service.getTypeKey(media)}(${media.getName()}, ${media.getIndex()})}"/>
-                </mj-text>
-
-                <mj-text th:with="episodes = ${service.getEpisodes(media, userGroup)}" th:unless="${#lists.isEmpty(episodes)}" color="#aaaaaa" font-size="15px" padding-top="0px">
-                    <span th:with="episodesStr = ${#strings.listJoin(episodes, ', ')}" th:text="#{mail.watchlist.body.media.series.episodes(${episodesStr})}"/>
-                </mj-text>
-
-                <mj-divider border-width="1px" border-color="#333"/>
-
-                <mj-text align="left">
-                    <a th:if="${media.getOverseerrId()}" th:href="${thymeleafService.getMediaOverseerrUrl(media)}" class="logo-link">
-                        <img th:src="|cid:${overseerrLogoResourceName}|" width="18" height="18" alt="Overseerr"/>
-                    </a>
-
-                    <a th:if="${media.getPlexId()}" th:href="${thymeleafService.getMediaPlexUrl(media)}" class="logo-link">
-                        <img th:src="|cid:${plexLogoResourceName}|" width="18" height="18" alt="Plex"/>
-                    </a>
-
-                    <a th:if="${media.getTmdbId()}" th:href="${thymeleafService.getMediaTmdbUrl(media)}" class="logo-link">
-                        <img th:src="|cid:${tmdbLogoResourceName}|" width="18" height="18" alt="TMDB"/>
-                    </a>
-
-                    <a th:if="${media.getTvdbId()}" th:href="${thymeleafService.getMediaTvdbUrl(media)}" class="logo-link">
-                        <img th:src="|cid:${tvdbLogoResourceName}|" width="18" height="18" alt="TVDB"/>
-                    </a>
-
-                    <a th:if="${media.getTmdbId()}" th:href="${thymeleafService.getMediaTraktUrl(media)}" class="logo-link">
-                        <img th:src="|cid:${traktLogoResourceName}|" width="18" height="18" alt="Trakt"/>
-                    </a>
-                </mj-text>
-            </mj-column>
-        </mj-section>
-
-        <mj-section background-color="transparent">
-            <mj-column width="100%">
-                <mj-divider border-width="1px" border-color="#222"/>
-                <mj-button th:href="${thymeleafService.getOwnUrl()}" th:text="#{mail.footer.app-link}" background-color="#E50914" color="white" font-weight="bold" border-radius="4px" padding-top="20px"/>
-            </mj-column>
-        </mj-section>
-
+    <mj-head th:insert="~{fragment/mail::header}"/>
+    <mj-body css-class="mj-body">
+        <th:block th:replace="~{fragment/mail::media-list}"/>
+        <th:block th:replace="~{fragment/mail::manage-website}"/>
     </mj-body>
 </mjml>
