--- a/src/main/resources/templates/fragment/mail.html
+++ b/src/main/resources/templates/fragment/mail.html
@@ -119,50 +119,37 @@
 </mj-body>
 
 <mj-body th:fragment="media-detailed">
-    <mj-section th:if="${suggestAddRequirementId}" css-class="mj-section">
-        <mj-column>
-            <mj-button th:text="#{mail.media.available.body.actions.requirement.add}" th:href="${thymeleafService.getAddWatchMediaUrl(suggestAddRequirementId)}" background-color="#28A745" color="#FFFFFF" font-weight="bold"/>
-        </mj-column>
-    </mj-section>
-
     <mj-section css-class="mj-section">
-        <mj-column>
+        <mj-column width="35%">
+            <mj-image th:src="|cid:${mediaPosterResourceName}|" alt="Media Poster" border-radius="8px" padding="10px 0px" width="180px"/>
+        </mj-column>
+        <mj-column width="65%">
             <mj-text align="center" css-class="mj-text">
-                <h1 th:text="${mediaTitle}" class="section-text" style="font-size: 28px; line-height: 40px;"/>
-                <h2 th:if="${mediaSeason}" th:text="${mediaSeason}" style="font-size: 18px; font-weight: 300;"/>
+                <h1 th:text="${mediaTitle}" class="section-text" style="font-size: 22px; line-height: 28px;"/>
+                <h2 th:if="${mediaSeason}" th:text="${mediaSeason}" style="font-size: 16px; font-weight: 300;"/>
             </mj-text>
-        </mj-column>
-    </mj-section>
-
-    <mj-section th:if="${mediaPosterResourceName}" css-class="mj-section">
-        <mj-column>
-            <mj-image th:src="|cid:${mediaPosterResourceName}|" alt="Media Poster" border-radius="8px" padding="0px"/>
-        </mj-column>
-    </mj-section>
-
-    <mj-section css-class="mj-section">
-        <mj-column>
-            <mj-text th:text="${mediaSummary}" align="center" font-size="16px" css-class="mj-text"/>
+            <mj-text th:text="${mediaSummary}" align="center" css-class="mj-text"/>
+            <mj-button th:if="${suggestAddRequirementId}" th:text="#{mail.media.available.body.actions.requirement.add}" th:href="${thymeleafService.getAddWatchMediaUrl(suggestAddRequirementId)}" align="center" background-color="#28A745" color="#FFFFFF" font-weight="bold"/>
         </mj-column>
     </mj-section>
 
     <mj-section css-class="mj-section mj-section-secondary">
         <mj-column width="50%">
-            <mj-text th:unless="${#strings.isEmpty(mediaReleaseDate)}" css-class="mj-text">
+            <mj-text th:unless="${#strings.isEmpty(mediaReleaseDate)}" align="center" css-class="mj-text">
                 <b th:text="#{mail.media.available.body.release-date}" class="section-text"/><br/>
                 <span th:text="${mediaReleaseDate}"/>
             </mj-text>
-            <mj-text th:unless="${#lists.isEmpty(mediaGenres)}" css-class="mj-text">
+            <mj-text th:unless="${#lists.isEmpty(mediaGenres)}" align="center" css-class="mj-text">
                 <b th:text="#{mail.media.available.body.genres}" class="section-text"/><br/>
                 <span th:each="genre, iter : ${mediaGenres}" th:text="${genre} + (${iter.last} ? '' : ', ')"/>
             </mj-text>
         </mj-column>
         <mj-column width="50%">
-            <mj-text th:unless="${#strings.isEmpty(mediaDuration)}" css-class="mj-text">
+            <mj-text th:unless="${#strings.isEmpty(mediaDuration)}" align="center" css-class="mj-text">
                 <b th:text="#{mail.media.available.body.length}" class="section-text"/><br/>
                 <span th:text="${mediaDuration}"/>
             </mj-text>
-            <mj-text th:unless="${#lists.isEmpty(mediaResolutions)}" css-class="mj-text">
+            <mj-text th:unless="${#lists.isEmpty(mediaResolutions)}" align="center" css-class="mj-text">
                 <b th:text="#{mail.media.available.body.resolutions}" class="section-text"/><br/>
                 <span th:each="res : ${mediaResolutions}" th:text="${res}"/>
             </mj-text>
@@ -171,7 +158,7 @@
 
     <mj-section css-class="mj-section mj-section-secondary">
         <mj-column width="50%">
-            <mj-text th:unless="${#lists.isEmpty(mediaAudios)}" css-class="mjs-text">
+            <mj-text th:unless="${#lists.isEmpty(mediaAudios)}" align="center" css-class="mjs-text">
                 <b th:text="#{mail.media.available.body.audios}" class="section-text"/>
                 <div th:each="audio : ${mediaAudios}" style="padding-top: 5px;">
                     <img th:if="${audio.flagUrl() != null}" th:src="${audio.flagUrl()}" width="20" class="inline-logo"/>
@@ -180,7 +167,7 @@
             </mj-text>
         </mj-column>
         <mj-column width="50%">
-            <mj-text th:unless="${#lists.isEmpty(mediaSubtitles)}" css-class="mjs-text">
+            <mj-text th:unless="${#lists.isEmpty(mediaSubtitles)}" align="center" css-class="mjs-text">
                 <b th:text="#{mail.media.available.body.subtitles}" class="section-text"/>
                 <div th:each="sub : ${mediaSubtitles}" style="padding-top: 5px;">
                     <img th:if="${sub.flagUrl() != null}" th:src="${sub.flagUrl()}" width="20" class="inline-logo"/>
